# cubicat_spine

./: .gitignore  CMakeLists.txt  Kconfig.projbuild  LICENSE  cubicat_spine.h  idf_component.yml
cubicat-port/: spine_extension.cpp  spine_extension.h  spine_node.cpp  spine_node.h  texture_loader.cpp  texture_loader.h
js_binding/: spine_api_export.cpp
spine-cpp_3.8/src/spine/: Extension.cpp  SkeletonBinary.cpp  SkeletonJson.cpp
spine-cpp_4.0/src/spine/: Skeleton.cpp
spine-cpp_4.2/src/spine/: Extension.cpp  PhysicsConstraintTimeline.cpp
tools/: js_api_generator.py
